<resources>
    <string name="app_name" translatable="false">LookToMoney</string>
    <string name="all_accounts">All accounts</string>
    <string name="create_new_acc">Creating new account</string>
    <string name="input_acc_name">Enter account name</string>
    <string name="input_acc_sum">Enter account sum</string>
    <string name="input_acc_icon">Choose account icon</string>
    <string name="account_title">Accounts</string>
    <string name="addCategory_title">Add Category</string>
    <string name="addChange_title">Add change</string>
    <string name="allChanges_title">Transactions</string>
    <string name="allCategories_title">Categories</string>
    <string name="statistic_title">Statistics</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="description">Description</string>
    <string name="name">Name</string>
    <string name="input_sum_hint">Enter sum</string>
    <string name="date_format">DD.MM.YYYY</string>
</resources>