<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.categories.CategoryMainFragment">


    <TextView
        android:id="@+id/tvTitle"
        style="@style/allTextWhite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/medium_blue"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingTop="26dp"
        android:paddingRight="10dp"
        android:paddingBottom="26dp"
        android:text="@string/allCategories_title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_income_or_outcome"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:id="@+id/tv_choice_input"
            style="@style/primaryTextBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/income"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_choice_output"
            style="@style/primaryTextBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/outcome"
            android:textSize="22sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_allCategorys"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_income_or_outcome"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_for_all_categorys">

    </androidx.recyclerview.widget.RecyclerView>

    <ImageButton
        android:id="@+id/btnAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/add_button"
        android:padding="10dp"
        android:src="@drawable/ic_plus"
        app:layout_constraintBottom_toBottomOf="@+id/rv_allCategorys"
        app:layout_constraintEnd_toEndOf="@+id/rv_allCategorys"
        app:tint="@color/white"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>