<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.accounts.CreateNewAccountFragment" >

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/medium_blue"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnGoBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="0"
            android:background="@color/medium_blue"
            android:padding="3dp"
            android:src="@drawable/ic_back"
            app:tint="@color/white"
            tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/tvCreateCategoryTitle"
            style="@style/allTextWhite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/create_new_acc"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/btnAccConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@drawable/ic_plus" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/allTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_acc_name"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/inputAccName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_acc_name"
                    android:inputType="text"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/allTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_acc_sum"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/input_acc_sum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/input_acc_sum"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/allTextBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/input_acc_icon"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinner_icon_wallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:minHeight="48dp"
                    tools:listitem="@layout/item_icon_for_category" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>